--- a/escom-bpm-web/src/main/webapp/logout.xhtml
+++ b/escom-bpm-web/src/main/webapp/logout.xhtml
@@ -2,7 +2,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -20,8 +21,8 @@
         <link rel="shortcut icon" href="#{resource['icon/done.png']}" type="image/png"/>
     </h:head>
 
-    <h:body>          
-
+    <h:body>        
+        
         <p:panel styleClass="panelLogin">             
             <p:panelGrid id="panelLogin" columns="3" layout="grid" columnClasses="col20, colAuto, colAuto,">
                 <p:graphicImage name="/images/escom_logo.jpg"  /> 
