--- a/escom-bpm-web/src/main/webapp/login.xhtml
+++ b/escom-bpm-web/src/main/webapp/login.xhtml
@@ -17,7 +17,7 @@
         
         <h:form id="loginFRM">
             <p:panel styleClass="panelLogin"> 
-                <p:messages id="messages" showDetail="true" closable="true"/> 
+                <p:messages id="messages" showDetail="true" closable="true" autoUpdate="true"/> 
 
                 <p:outputPanel id="panelLogin">
                     <p:poll interval="60" listener="#{loginBean.resetLoginLock()}" update="loginFRM" 
@@ -52,9 +52,9 @@
                         <h:panelGroup id="userPanel">
                             <p:inputText id="j_username" value="#{loginBean.userName}" title="#{bundle.welcom2}"
                                          required="true" requiredMessage="#{bundle.Field} [#{bundle.User}] #{bundle.MustBeFilled}"
-                                         style="width: 80%;"
+                                         styleClass="ui-grid-col-9"
                                          disabled="#{loginBean.isLoginLock()}"/>
-                            <p:message for="j_username" />
+                            <p:message for="j_username" styleClass="ui-grid-col-9"/>
                         </h:panelGroup>
 
                         <p:outputLabel value="#{bundle.password}:"/>
@@ -62,15 +62,15 @@
                             <p:password id="j_password" value="#{loginBean.password}"
                                         required="true" requiredMessage="#{bundle.Field} [#{bundle.password}] #{bundle.MustBeFilled}"
                                         disabled="#{loginBean.isLoginLock()}"                                        
-                                        style="width: 80%;"/>
-                            <p:message for="j_password" />
+                                        styleClass="ui-grid-col-9"/>
+                            <p:message for="j_password" styleClass="ui-grid-col-9"/>
                         </h:panelGroup>
 
                         <p:spacer/>
 
                         <p:commandButton id="btnLogin" value="#{bundle.enter}" title="#{bundle.EnterProgram}"
                                          icon="ui-icon-circle-triangle-e"
-                                         update="panelLogin" ajax="false"
+                                         update="panelLogin" 
                                          disabled="#{loginBean.isLoginLock()}"
                                          action="#{loginBean.login()}"/>
                         <p:spacer/>
@@ -82,5 +82,6 @@
             </p:panel>
 
         </h:form>
+        <ui:include src="/view/common/error-dlg.xhtml"/>
     </ui:define>
 </ui:composition>
