--- a/escom-bpm-web/src/main/webapp/logout.xhtml
+++ b/escom-bpm-web/src/main/webapp/logout.xhtml
@@ -24,12 +24,12 @@
     <h:body>        
         <h:form id="login" target="_blank">
             <p:panel styleClass="panelLogin">             
-                <p:panelGrid id="panelLogin" columns="3" layout="grid" columnClasses="col20, colAuto, colAuto,">
+                <p:panelGrid id="panelLogin" columns="2" layout="grid" columnClasses="ui-grid-col-4, ui-grid-col-8">
                     <p:graphicImage name="/images/escom_logo.jpg"  /> 
                     <h:panelGroup>
-                        <h3>
+                        <h2>
                             <h:outputLabel value="#{msg.YouExitFromProgramm}"/> 
-                        </h3>
+                        </h2>
                     </h:panelGroup>    
                     
                 </p:panelGrid>
