--- a/escom-bpm-web/src/main/webapp/login.xhtml
+++ b/escom-bpm-web/src/main/webapp/login.xhtml
@@ -31,6 +31,8 @@
                                     <h:outputLabel value="#{bundle.welcom}"/> <br/>
                                     <h:outputLabel value="#{bundle.ProgramName}"/> 
                                 </h2>
+                                <p:outputLabel value="#{bundle.Licensor}: "/>
+                                <h:outputLabel value="#{applicationBean.licence.licensor}" />
                             </h:panelGroup>
                         </p:panelGrid>
                         
