--- a/escom-bpm-web/src/main/webapp/login.xhtml
+++ b/escom-bpm-web/src/main/webapp/login.xhtml
@@ -7,7 +7,7 @@
                 template="/view/templ/templ.xhtml">
 
     <ui:define name="title">
-        #{bundle.enter}
+        #{bundle.ProgramName} #{bundle.EnterToProgram}
     </ui:define> 
 
     <ui:define name="body">
