--- a/escom-bpm-web/src/main/webapp/login.xhtml
+++ b/escom-bpm-web/src/main/webapp/login.xhtml
@@ -82,7 +82,7 @@
                                 <p:message for="j_code" styleClass="ui-grid-col-9"/>
                             </h:panelGroup>
 
-                            <p:spacer/>
+                            <p:spacer/><p:spacer/>
 
                             <p:commandButton id="btnLogin" value="#{bundle.enter}" title="#{bundle.EnterProgram}"
                                              icon="ui-icon-circle-triangle-e"
