--- a/escom-bpm-web/src/main/webapp/login.xhtml
+++ b/escom-bpm-web/src/main/webapp/login.xhtml
@@ -17,6 +17,7 @@
         </f:metadata>
 
         <h:form id="loginFRM">
+            <ui:include src="/view/common/exeption-handler.xhtml"/>
             <p:panel styleClass="panelLogin" >
                 <p:messages id="messages" showDetail="true" closable="true" >
                     <p:autoUpdate />
