--- a/escom-bpm-web/src/main/webapp/logout.xhtml
+++ b/escom-bpm-web/src/main/webapp/logout.xhtml
@@ -24,7 +24,7 @@
     <h:body>        
         <h:form id="login" target="_blank">
             <p:panel styleClass="panelLogin">             
-                <p:panelGrid id="panelLogin" columns="2" layout="grid" columnClasses="ui-grid-col-4, ui-grid-col-8">
+                <p:panelGrid id="panelLogin" columns="2" columnClasses="ui-grid-col-4, ui-grid-col-8">
                     <p:graphicImage name="/images/escom_logo.jpg"  /> 
                     <h:panelGroup>
                         <h2>
