--- a/escom-bpm-web/src/main/webapp/login.xhtml
+++ b/escom-bpm-web/src/main/webapp/login.xhtml
@@ -89,7 +89,7 @@
                                              icon="ui-icon-circle-triangle-e"
                                              update="panelLogin" 
                                              disabled="#{loginBean.isLoginLock()}"
-                                             actionListener="#{loginBean.login()}"
+                                             action="#{loginBean.login()}"
                                              onstart="return isClose = 1;"/>
                         </p:panelGrid>
                         <p:outputLabel value="#{bundle.DeveloperInfo}" style="font-size: x-small;" /> 
